# Binary-Constraint-Solver

./: .gitignore  README.md  allInt.sh  dependencies.sh  dune-project  queens.sh
graphs/: allDiff.txt  input_1.txt  input_2.txt  input_2_simple.txt  input_3.txt  input_4.txt  no_solution.txt
lib/: AC_2001.ml  AC_3.ml  AC_4.ml  AC_6.ml  constraint.ml  doublyLinkedList.ml  dune  filtrage.ml  parser.ml
lib/filtering_algo/: AC_2001.ml  AC_3.ml  AC_4.ml  AC_6.ml  AC_6_last.ml  AC_6_real.ml  AC_6_speed.ml  Arc_consistency.ml  constraint.ml  constraint.mli  filtrage.ml  graph.ml  graph.mli  solver.ml
lib/tools/: allIntervalSeries.ml  doublyLinkedList.ml  myPrint.ml  queens.ml  tuple.ml
report/: bib.bib  environments.sty  main.tex  makePlots.sty  rapport.cls  variable.sty
report/sections/stats/: path_number_plot.tex
stats/: AllIntervalSeries-AC-2001.csv  AllIntervalSeries-AC-3.csv  AllIntervalSeries-AC-4.csv  AllIntervalSeries-AC-6.csv  Queens-AC-2001.csv  Queens-AC-3.csv  Queens-AC-4.csv  Queens-AC-6.csv  allIntSeries.txt  makeplot.py  queens.txt
test/: dune
